changes to documents post merge

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,7 +1,7 @@
 {
   "promptDelete": false,
   "legacyEditor": false,
-  "livePreview": true,
+  "livePreview": false,
   "fileSortOrder": "alphabetical",
   "alwaysUpdateLinks": true,
   "spellcheck": true,
